优化更新并且补充站点地图

--- a/source/_posts/工具/常用站点.md
+++ b/source/_posts/工具/常用站点.md
@@ -1,11 +1,12 @@
 ---
-  title: 精品站点
+  title: 站点收集
   date: {{ date }}
   categories: ['工具']
   tags: ['站点']
 ---
 
-## 精品站点
+## 图片类品站点
+
+> 因为部分国外连接不能放，否则网站会直接被墙，所以大家可转到简书看一下另外部分。
 
 #### 图片类
-1. https://pixabay.com/
