--- a/source/_posts/心理/深度工作.md
+++ b/source/_posts/心理/深度工作.md
@@ -40,15 +40,15 @@
 
 作者还强调，深度工作不是一项过时的技能，而是将人们从技术垄断导致的精神异化状态中解救出来的良药。在当前这个以网络为中心的浮浅信息时代，倡导深度工作无异于呼唤一种匠人精神的回归。
 
---- 
+---
 #### 读后随笔
-无
+当今信息干扰极强的时代，掌握深度工作要点很重要，会极大提升我们的工作效率，值得一阅
 
---- 
-#### 下载地址 
-[百度网盘](https://pan.baidu.com/share/init?surl=eSrh8NS)     密码    ey14  
+---
+#### 下载地址
+[百度网盘](https://pan.baidu.com/share/init?surl=eSrh8NS)     密码    ey14
 #### 购买地址
-[京东自营](https://u.jd.com/wZpfJb) | [京东店铺（便宜点）](https://u.jd.com/1uHIB2) | [天猫](https://s.click.taobao.com/t?e=m%3D2%26s%3DBwRxDcosPpMcQipKwQzePOeEDrYVVa64K7Vc7tFgwiHjf2vlNIV67mdACaw97RCmPfl2ZNdwIlkwhN4g0vuY0S1nefbFfynQ3QoYakaPhf04xxsNENNuNoDXwlTuuhQ2r0l2htiAklSr5FQrKnzRsbJPnn5uavzvnZIGaVTdnTxxKmPmpIKZsA%3D%3D&pvid=10_139.227.74.223_11300_15575626308652)  
+[京东自营](https://u.jd.com/wZpfJb) | [京东店铺（便宜点）](https://u.jd.com/1uHIB2) | [天猫](https://s.click.taobao.com/t?e=m%3D2%26s%3DBwRxDcosPpMcQipKwQzePOeEDrYVVa64K7Vc7tFgwiHjf2vlNIV67mdACaw97RCmPfl2ZNdwIlkwhN4g0vuY0S1nefbFfynQ3QoYakaPhf04xxsNENNuNoDXwlTuuhQ2r0l2htiAklSr5FQrKnzRsbJPnn5uavzvnZIGaVTdnTxxKmPmpIKZsA%3D%3D&pvid=10_139.227.74.223_11300_15575626308652)
 
 
 ---
