增加腾讯验证

--- a/source/_posts/课程/圈外同学/简介.md
+++ b/source/_posts/课程/圈外同学/简介.md
@@ -7,6 +7,8 @@
 ---
 
 ## 个人发展战略课程简介
+[课程目录,点击查看](https://ireader.top/tags/%E5%9C%88%E5%A4%96/)
+
 
 ![image](https://puui.qpic.cn/fans_admin/0/3_1379510754_1558921537187/0)
 
